k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rustim
  labels:
    name: rustim
    app: rustim
    version: v1.0.0
